# Vermyth

./: .gitignore  CHANGELOG.md  DRIFT_PLAYBOOK.md  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  corpus_real.json  corpus_v0_synthetic.json  corpus_v1_synthetic.json  genesis_baseline.py  genesis_report.md  report.md  run.py  run_external.py  splits.py  tuned_thresholds.json  tuner.py  update_report.py
docs/: STABILITY.md  a2a-compatibility.md  a2a.md  benchmarks.md  decide.md  http_adapter.md  security-threat-model.md
examples/: end_to_end.py
scripts/: print_policy_decision_golden.py
tests/: conftest.py  test_a2a_optional.py  test_action_ir_executor.py  test_arcane.py  test_arcane_transcript.py  test_arcane_transcript_exposure.py  test_auto_cast_diagnostics.py  test_basis_versioning.py  test_benchmark_smoke.py  test_binary_session_transport.py  test_bundle_adoption_report.py  test_bundle_telemetry.py  test_capability_tokens.py  test_causal_graph.py  test_cli.py  test_cli_families.py  test_composition.py  test_contract_compliance.py  test_contracts.py  test_corpus_and_tuner.py  test_crystallization_loop.py  test_divergence_detection.py  test_effect_risk_decide.py  test_embedding_backend.py  test_emergent_genesis.py  test_extension_api.py  test_extraction_invariants.py  test_fluid_casts.py  test_genesis_baseline.py  test_geometric_protocol.py  test_grimoire.py  test_http_adapter.py  test_lineage.py  test_mcp_skeleton.py  test_mcp_tools.py  test_no_monoliths.py  test_observability.py  test_policy_models.py  test_program_validation.py  (+11 more)
(+284 files in other folders)
